[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Game/Decoracion/Money/Sprites/Moneda/coin.png" type="Texture" id=1]
[ext_resource path="res://Assets/Game/Decoracion/Money/Moneda.gd" type="Script" id=8]
[ext_resource path="res://Assets/Game/Decoracion/Money/Sonidos/Coin.ogg" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Girar"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Recojer"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 5.5 )

[node name="Moneda" type="Area2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
type = "Moneda"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/Girar = SubResource( 1 )
anims/Recojer = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.0

[connection signal="body_entered" from="." to="." method="_on_Moneda_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
